--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
             <ul class="lista-menu">
                 <li class="lista-menu_titulo">categoria</li>
                 <li class="lista-menu_item">
-                    <a href="#" class="lista-menu_link">programação</a></li>
+                    <a href="#" class="lista-menu_link">Programação</a></li>
+                <li class="lista-menu_item">
+                    <a href="#" class="lista-menu_link">Front-end</a></li>
+                <li class="linta-menu_item">
+                    <a href="#" class="lista-menu_link">Infraestrutura</a></li>
+                <li class="lista-menu_link">
+                    <a href="#" class="lista-menu_link">Business</a></li>
+                <li class="lista-menu_item">
+                    <a href="#" class="lista-menu_link">Design & UX</a></li>
+            </ul>
+        <img src="img/Logo.svg" alt="logo da alurabooks" class="container_imagem">
+     </div>
+         <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container_imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras" class="container_imagem"></a>
+            <a href="#"><ime src="img/Usuario.svg" alt="Meu Perfil" class="container_imagem"></a>
+                
             
 
 
